[gd_scene load_steps=4 format=2]

[ext_resource path="res://tools/verdict/verdictTab.gd" type="Script" id=1]
[ext_resource path="res://tools/verdict/saveConfirm.gd" type="Script" id=2]
[ext_resource path="res://tools/verdict/actionList.gd" type="Script" id=3]

[node name="Verdict" type="TabBar"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="mainSeparator" type="HBoxContainer" parent="background"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="fileList" type="ItemList" parent="background/mainSeparator"]
offset_right = 130.0
offset_bottom = 768.0
custom_minimum_size = Vector2( 130, 0 )
size_flags_vertical = 3

[node name="dataPanel" type="PanelContainer" parent="background/mainSeparator"]
offset_left = 134.0
offset_right = 984.0
offset_bottom = 768.0
custom_minimum_size = Vector2( 850, 0 )
size_flags_vertical = 3

[node name="dataContainer" type="VBoxContainer" parent="background/mainSeparator/dataPanel"]
offset_left = 7.0
offset_top = 7.0
offset_right = 843.0
offset_bottom = 761.0
pivot_offset = Vector2( -674.514, 141.424 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="identification" type="VBoxContainer" parent="background/mainSeparator/dataPanel/dataContainer"]
offset_right = 836.0
offset_bottom = 94.0
alignment = 1

[node name="title" type="HBoxContainer" parent="background/mainSeparator/dataPanel/dataContainer/identification"]
offset_right = 836.0
offset_bottom = 22.0

[node name="lblIdentification" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/identification/title"]
offset_right = 170.0
offset_bottom = 22.0
text = "↳ Identification "

[node name="HSeparator2" type="HSeparator" parent="background/mainSeparator/dataPanel/dataContainer/identification/title"]
offset_left = 174.0
offset_right = 836.0
offset_bottom = 22.0
size_flags_horizontal = 3

[node name="fields" type="CenterContainer" parent="background/mainSeparator/dataPanel/dataContainer/identification"]
offset_top = 26.0
offset_right = 836.0
offset_bottom = 94.0

[node name="grid" type="GridContainer" parent="background/mainSeparator/dataPanel/dataContainer/identification/fields"]
offset_left = 121.0
offset_right = 715.0
offset_bottom = 68.0
custom_minimum_size = Vector2( 594, 0 )
columns = 2

[node name="lblName" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/identification/fields/grid"]
offset_top = 5.0
offset_right = 110.0
offset_bottom = 27.0
text = "Name"

[node name="txtName" type="LineEdit" parent="background/mainSeparator/dataPanel/dataContainer/identification/fields/grid"]
offset_left = 114.0
offset_right = 594.0
offset_bottom = 32.0
clear_button_enabled = true

[node name="lblShortName" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/identification/fields/grid"]
offset_top = 41.0
offset_right = 110.0
offset_bottom = 63.0
text = "Short name "

[node name="txtShortName" type="LineEdit" parent="background/mainSeparator/dataPanel/dataContainer/identification/fields/grid"]
offset_left = 114.0
offset_top = 36.0
offset_right = 594.0
offset_bottom = 68.0
size_flags_horizontal = 3
clear_button_enabled = true

[node name="Control" type="Control" parent="background/mainSeparator/dataPanel/dataContainer"]
offset_top = 98.0
offset_right = 836.0
offset_bottom = 113.0
custom_minimum_size = Vector2( 0, 15 )
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="actions" type="VBoxContainer" parent="background/mainSeparator/dataPanel/dataContainer"]
offset_top = 117.0
offset_right = 836.0
offset_bottom = 703.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="title" type="HBoxContainer" parent="background/mainSeparator/dataPanel/dataContainer/actions"]
offset_right = 836.0
offset_bottom = 28.0

[node name="lblActions" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/actions/title"]
offset_top = 3.0
offset_right = 100.0
offset_bottom = 25.0
text = "↳ Actions "

[node name="HSeparator2" type="HSeparator" parent="background/mainSeparator/dataPanel/dataContainer/actions/title"]
offset_left = 104.0
offset_right = 776.0
offset_bottom = 28.0
size_flags_horizontal = 3

[node name="btnAdd" type="Button" parent="background/mainSeparator/dataPanel/dataContainer/actions/title"]
offset_left = 780.0
offset_right = 822.0
offset_bottom = 28.0
text = "Add"

[node name="HSeparator3" type="HSeparator" parent="background/mainSeparator/dataPanel/dataContainer/actions/title"]
offset_left = 826.0
offset_right = 836.0
offset_bottom = 28.0
custom_minimum_size = Vector2( 10, 0 )

[node name="data" type="Panel" parent="background/mainSeparator/dataPanel/dataContainer/actions"]
offset_top = 32.0
offset_right = 836.0
offset_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="scroll" type="ScrollContainer" parent="background/mainSeparator/dataPanel/dataContainer/actions/data"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="background/mainSeparator/dataPanel/dataContainer/actions/data/scroll"]
offset_right = 836.0
offset_bottom = 554.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="Control2" type="Control" parent="background/mainSeparator/dataPanel/dataContainer"]
offset_top = 707.0
offset_right = 836.0
offset_bottom = 722.0
custom_minimum_size = Vector2( 0, 15 )
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="buttons" type="VBoxContainer" parent="background/mainSeparator/dataPanel/dataContainer"]
offset_top = 726.0
offset_right = 836.0
offset_bottom = 754.0
size_flags_horizontal = 3
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="background/mainSeparator/dataPanel/dataContainer/buttons"]
offset_right = 836.0
offset_bottom = 28.0
alignment = 1

[node name="Control" type="Control" parent="background/mainSeparator/dataPanel/dataContainer/buttons/HBoxContainer"]
offset_right = 192.0
offset_bottom = 28.0
size_flags_horizontal = 3

[node name="btnSave" type="Button" parent="background/mainSeparator/dataPanel/dataContainer/buttons/HBoxContainer"]
offset_left = 196.0
offset_right = 389.0
offset_bottom = 28.0
size_flags_horizontal = 3
text = "Save|Create"

[node name="Control2" type="Control" parent="background/mainSeparator/dataPanel/dataContainer/buttons/HBoxContainer"]
offset_left = 393.0
offset_right = 443.0
offset_bottom = 28.0
custom_minimum_size = Vector2( 50, 0 )

[node name="btnReload" type="Button" parent="background/mainSeparator/dataPanel/dataContainer/buttons/HBoxContainer"]
offset_left = 447.0
offset_right = 639.0
offset_bottom = 28.0
size_flags_horizontal = 3
text = "Reload entities"

[node name="Control3" type="Control" parent="background/mainSeparator/dataPanel/dataContainer/buttons/HBoxContainer"]
offset_left = 643.0
offset_right = 836.0
offset_bottom = 28.0
size_flags_horizontal = 3

[node name="saveConfirm" type="ConfirmationDialog" parent="."]
offset_right = 218.0
offset_bottom = 74.0
script = ExtResource( 2 )

[connection signal="item_selected" from="background/mainSeparator/fileList" to="." method="_on_fileList_item_selected"]
[connection signal="text_changed" from="background/mainSeparator/dataPanel/dataContainer/identification/fields/grid/txtName" to="." method="_on_txtName_text_changed"]
[connection signal="text_changed" from="background/mainSeparator/dataPanel/dataContainer/identification/fields/grid/txtShortName" to="." method="_on_txtShortName_text_changed"]
[connection signal="pressed" from="background/mainSeparator/dataPanel/dataContainer/actions/title/btnAdd" to="." method="_on_btnAdd_pressed"]
[connection signal="pressed" from="background/mainSeparator/dataPanel/dataContainer/buttons/HBoxContainer/btnSave" to="." method="_on_btnSave_pressed"]
[connection signal="pressed" from="background/mainSeparator/dataPanel/dataContainer/buttons/HBoxContainer/btnReload" to="." method="_on_btnReload_pressed"]
[connection signal="confirmed" from="saveConfirm" to="." method="_on_saveConfirm_confirmed"]
